Code cleanup * move Commands out to otherSrc (not used by HSBCXero) * move commented out code from excel-functions * cleanup linter complaints * exclude otherSrc from tsconfig and webpack.config

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -2,7 +2,7 @@
 <!-- This file shows how to design a first-run page that provides a welcome screen to the user about the features of the add-in. -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -57,7 +57,8 @@
                     id="file"
                     type="file"
                     name="file"
-                    style="display: none"
+                    class = "hidden"
+                    title = "Select CSV File"
                     accept=".csv,text/csv"
                 />
             </div>
